Add aaron to developers list

--- a/README
+++ b/README
@@ -5,3 +5,4 @@ FlavorPHP aims to empower its users to rapidly develop web applications in an ea
 @author Pedro Santana <pecesama_at_gmail_dot_com>
 @author Victor Bracco <vbracco_at_gmail_dot_com>
 @author Victor de la Rocha <vyk2rr_at_gmail_dot_com>
+@author Aaron Munguia <aamm89_at_gmail_dot_com>
